--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         
         import {
                DoubleSide, FrontSide, BackSide, TextBufferGeometry
-        } from "../node_modules/three/build/three.module.js";
+        } from "https://cdn.jsdelivr.net/npm/three@0.124/build/three.module.js";
 
         import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.124/build/three.module.js'; 
 
